--- a/Changellenge.html
+++ b/Changellenge.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Page Title</title>
-</head>
-<body>
-приа
-
-
-</body>
+  <head>
+    <title>Подключение CSS к HTML</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+  </head>
+  <body>
+    <h1>Заголовок первого уровня</h1>
+    Здесь просто текст
+    <h2>Заголовок второго уровня</h2>
+    Здесь просто текст
+  </body>
 </html>
