--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="icon" href="img/3.jpg">
 		<meta property="og:url" content="https://oleshkomur.github.io/"> 
 		<meta property="og:type" content="website"> 
-		<meta property="og:title" content="Муравьёв Олег"> 
+		<meta property="og:title" content="Hack-and-Change2020"> 
 		<meta property="og:image" content=""> 
 		<meta property="og:description" content="Урок от 1000р."> 
 		<meta property="og:site_name" content="Портфолио"> 
@@ -32,10 +32,7 @@
 		<div class="all"> <!--Это вся страница-->
 			<div class="header"> <!--Главный экран-->
 				<div class="menu">
-							<a href="#about">ОБО МНЕ</a>
-							<a href="#port">ПОРТФОЛИО</a>
-							<a href="#zakaz">ЗАКАЗАТЬ</a>
-							<a href="#footer">КОНТАКТЫ</a>
+					<img src="img/Group_5.png"> 
 				</div>
 				<div class="hd">
 					<h1>Муравьёв Олег</h1>
