--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="header"> <!--Главный экран-->
 				<div class="menu">
 					<div class='wave'></div>
-					<img src="img/Group_5.png"> 
+					<img src="img/zma1.png"> 
 				</div>
 				<div class="hd">
 					<h1>Муравьёв Олег</h1>
