--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="all"> <!--Это вся страница-->
 			<div class="header"> <!--Главный экран-->
 				<div class="menu">
-					<div class='wave'></div>
+					<!--div class='wave'></div-->
 					<img src="img/zma1.png"> 
 				</div>
 				<div class="hd">
