--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	<body> <!--Тело сайта; То, что видит пользователь-->
 		<div class="all"> <!--Это вся страница-->
 			<div class="header"> <!--Главный экран-->
-				<div class="menu">
-					<!--div class='wave'></div-->
-					<!--img src="img/zma1.png"--> 
-				</div>
+				<!--div class="menu">
+					<--div class='wave'></div--
+					<--img src="img/zma1.png"-- 
+				</div-->
 				<div class="hd">
 					<h1>Муравьёв Олег</h1>
 				</div>
