--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> <!--Вкладка, поиск, ключевые слова, иконка-->
 		<meta charset="utf-8">
 		<title>
-			Муравьёв Олег
+			Hack&Change 2020
 		</title>
 		<link href="css/bootstrap_min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -36,7 +36,7 @@
 					<--img src="img/zma1.png"-- 
 				</div-->
 				<div class="hd">
-					<h1>Муравьёв Олег</h1>
+					<h1>решение</h1>
 				</div>
 			</div>
 			<div class="about" id="about"> <!--Обо мне-->
