--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 		<meta property="og:type" content="website"> 
 		<meta property="og:title" content="Hack-and-Change2020"> 
 		<meta property="og:image" content=""> 
-		<meta property="og:description" content="Урок от 1000р."> 
-		<meta property="og:site_name" content="Портфолио"> 
-		<meta property="article:author" content="Муравьёв Олег">
+		<meta property="article:author" content="глек">
 		<script src="js/wow.min.js"></script>
 		<script src="js/jquery.ui.totop.min.jc"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -40,12 +38,6 @@
 				</div>
 			</div>
 						<div class="col-md-8">
-							<div class="text">
-								<p>Как до меня добраться?</p>
-							</div>
-							<div class="map">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d724002.2540678767!2d14.33924397421876!3d44.859570748986926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2shr!4v1596883539248!5m2!1sru!2shr" width="700" height="370" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-							</div>
 							<div class="social-links">
 							<a href="https:/vk.com/id248197879"><i class="icon-vk"></i></a>
 							<a href="https:/instagram.com/muravevoleshko"><i class="icon-inst"></i></a>
