--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="row">
 							<a href="site.html"><div class="col-md-4">
 								<div class="foto">
-									<img src="img/3.jpg">
+									<img src="img/B8iHi0dqlk4.jpg">
 								</div>
 								<div class="text">
 									<h3>Сайты</h3>
