--- a/index.html
+++ b/index.html
@@ -43,17 +43,23 @@
 						<div class="row">
 							<a href="site.html"><div class="col-md-4">
 								<div class="foto">
-									<img src="img/B8iHi0dqlk4.jpg">
+									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
-									<h3>Сайты</h3>
+									<h3>Александров Григорий</h3>
 								</div>
+								
+								</div>
+								<div class="text">
+									<h3>Разработчик алгоритма</h3>
+								</div>
+								
 							</div></a>
-							<a href=""><div class="col-md-4">
+							<a href="https://vk.com/that_who_came"><div class="col-md-4">
 								<div class="foto">
 									<img src="img/6.jpg">
 								<div class="text">
-									<h3>Скрипты</h3>
+									<h3>Создатель сайта</h3>
 								</div>
 								</div>
 							</div></a>
