--- a/index.html
+++ b/index.html
@@ -47,13 +47,7 @@
 								</div>
 								<div class="text">
 									<h3>Александров Григорий</h3>
-								</div>
-								
-								</div>
-								<div class="text">
-									<h3>Разработчик алгоритма</h3>
-								</div>
-								
+									<p><h1>Разработчик алгоритма</h1></p>
 							</div></a>
 							<a href="https://vk.com/that_who_came"><div class="col-md-4">
 								<div class="foto">
