--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
 				<div class="container">
 					<h1>Портфолио</h1>
 						<div class="row">
-							<a href="https://vk.com/that_who_came"><div class="col-md-4">
+							
+							<a href="site.html"><div class="col-md-4">
 								<div class="foto">
 									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
-									<h3>Александров Григорий</h3>
-									<p align="center"><h5>Разработчик алгоритма</h5></p>
+									<h3>Александров Григорий</h3><br/><h5>Разработчик алгоритма</h5>
+								</div>
 							</div></a>
+							
 							<a href=""><div class="col-md-4">
 								<div class="foto">
 									<img src="img/6.jpg">
