--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
-									<h3>Александров Григорий</h3><br/><h5>Разработчик алгоритма</h5>
+									<h3>Александров Григорий</h3><br/>
+									<h4>Разработчик алгоритма</h4>
 								</div>
 							</div></a>
 							
