--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
-									<h3>Александров Григорий</h3><br/>
+									<h3>Александров Григорий</h3>
 									<h2>Разработчик алгоритма</h2>
 								</div>
 							</div></a>
