--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 			</div>
 			<div class="port" id="port"> <!--Портфолио-->
 				<div class="container">
-					<h1>Портфолио</h1>
+					<h1>Разработчики</h1>
 						<div class="row">
 							
-							<a href="site.html"><div class="col-md-4">
+							<a href="https://vk.com/that_who_came"><div class="col-md-4">
 								<div class="foto">
 									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
 									<h3>Александров Григорий</h3>
-									<h2>Разработчик алгоритма</h2>
+									<p align = "center"><h2>Разработчик алгоритма</h2></p>
 								</div>
 							</div></a>
 							
