--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</div>
 								<div class="text">
 									<h3>Александров Григорий</h3>
-									<p align = "center"><h2>Разработчик алгоритма</h2></p>
+									<h2>"   "Разработчик алгоритма</h2>
 								</div>
 							</div></a>
 							
