--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							
 							<a href="https://vk.com/that_who_came"><div class="col-md-4">
 								<div class="foto">
-									<img src="img/гр.jpg">
+									<img src="img/gr.jpg">
 								</div>
 								<div class="text">
 									<h3>Александров Григорий</h3>
