--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</div>
 								<div class="text">
 									<h3>Федянин Артём</h3>
-									<h2>жопа</h2>
+									<h2>Аналитик</h2>
 								</div>
 							</div></a>
 							
@@ -78,7 +78,7 @@
 								</div>
 								<div class="text">
 									<h3>Муравьёв Олег</h3>
-									<h2>жопа</h2>
+									<h2>Дизайнер</h2>
 								</div>
 							</div></a>
 							
