--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 			</div>
 						<div class="col-md-8">
 							<div class="social-links">
-							<a href="https:/vk.com/id248197879"><i class="icon-vk"></i></a>
-							<a href="https:/instagram.com/muravevoleshko"><i class="icon-inst"></i></a>
+							<a href="https://vk.com/club191626393"><i class="icon-vk"></i></a>
+							<a href="https://instagram.com/muravevoleshko"><i class="icon-inst"></i></a>
 						</div>
 					</div>
 				</div>
