--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="col-md-8">
 							<div class="social-links">
 							<a href="https://vk.com/club191626393"><i class="icon-vk"></i></a>
-							<a href="https://instagram.com/muravevoleshko"><i class="icon-inst"></i></a>
+							<a href="https://www.instagram.com/morgen_shtern/"><i class="icon-inst"></i></a>
 						</div>
 					</div>
 				</div>
