--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 						<div class="col-md-8">
 							<div class="social-links">
-							<a href="https://vk.com/club191626393"><i class="icon-vk"></i></a>
+							<a href="https://vk.com/morgenshtern"><i class="icon-vk"></i></a>
 							<a href="https://www.instagram.com/morgen_shtern/"><i class="icon-inst"></i></a>
 						</div>
 					</div>
