--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/ui.totop.css" media="screen,projection">
 		<link rel="stylesheet" href="css/fontello.css">
 		<link rel="stylesheet" href="css/fontello-embedded.css">
-		<link rel="icon" href="img/3.jpg">
+		<link rel="icon" href="img/hc.png">
 		<meta property="og:url" content="https://oleshkomur.github.io/"> 
 		<meta property="og:type" content="website"> 
 		<meta property="og:title" content="Hack-and-Change2020"> 
