--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 					<--img src="img/zma1.png"-- 
 				</div-->
 				<div class="hd">
-					<h1>решение</h1>
+					<h1>Описание решения задачи</h1><br/>
+					<br/>
+					<h4>1) Расчет взвешенной дистрибуции; <br/> 2) Расчет нумерической дистрибуции; <br/> 3) Проектирование витрины для хранения результатов </h4>	
 				</div>
 			</div>
 			<div class="port" id="port"> <!--Портфолио-->
